plugins {
    id 'java'
    id 'application'
//    id 'com.github.johnrengelman.shadow' version '6.0.0'
}

mainClassName = 'com.example.jda.Bot'
version 'v3.00'
sourceCompatibility = 21
targetCompatibility = 21

repositories {
    mavenCentral()
}

jar {
    manifest {
        attributes "Main-Class": "Main"
    }
}

dependencies {
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'
    implementation 'com.github.ygimenez:Pagination-Utils:3.0.6'
    implementation 'net.dv8tion:JDA:5.0.0-alpha.1'
    implementation 'mysql:mysql-connector-java:8.0.33'
}

compileJava.options.encoding = 'UTF-8'

application {
    mainClassName = 'Main'
}
